Prevent scrolling when profile dropdown is visible

--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -118,3 +118,11 @@
   font-size: rem(14);
   font-weight: fw("medium");
 }
+
+@mixin dropdownLinks {
+  transition: all 0.5s ease;
+  padding-block: rem(4);
+  &:hover {
+    color: clr("accent");
+  }
+}
