--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -65,7 +65,6 @@
       &__body .table__row:last-child {
         .table__cell:not(.empty) {
           border-bottom: 0;
-          padding-bottom: 0;
         }
       }
     }
