--- a/src/styles/layout/_index.scss
+++ b/src/styles/layout/_index.scss
@@ -12,7 +12,7 @@
 
     .layout__main {
       padding: rem(60);
-      margin-bottom: rem(450);
+      margin-bottom: rem(250);
 
       @include screen("tablet") {
         padding: rem(40);
