--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -57,6 +57,18 @@
         border-radius: 100%;
         overflow: hidden;
       }
+
+      .profile__dropdown-content {
+        margin-block: rem(20);
+        padding-block: rem(16);
+        display: flex;
+        flex-direction: column;
+        gap: rem(8);
+        border-block: rem(1) solid rgba(clr("text-background"), 0.4);
+        > a {
+          @include dropdownLinks;
+        }
+      }
     }
   }
 
